nav margins fixed - less whitespace up top

--- a/main.css
+++ b/main.css
@@ -2,15 +2,10 @@
     border-bottom: 1.5px solid #6abaef;
 }
 
-.nav-item {
-    font-family: ''Verdana', sans-serif';
-    font-size: 1.5em;
-    color: #13284a;
-    text-align: center;
-}
-
 .social-link {
-    margin-top: 50%;
+    margin-top: 60%;
+    margin-left: -7.5px;
+    margin-right: -7.5px;
 }
 
 .page-title {
@@ -19,7 +14,7 @@
     font-weight: bold;
     color: #13284a;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 ul.nav a:hover { 
